test/types/tuple/diten/underscore_is_special.chpl
var _: int;

_ = 3;
writeln(_);
